package solid.singleresponsibility.solution;

public class EmployeeData {
}
