package solid.singleresponsibility.solution;

public class EmployeeSaver {
    private EmployeeData data;

    /**
     * save all current information of this employee.
     */
    public void save(){

    }
}
