@startuml

title __SOLUTION's Class Diagram__\n

  namespace solid.singleresponsibility.solution {
    class solid.singleresponsibility.solution.EmployeeData {
    }
  }
  

  namespace solid.singleresponsibility.solution {
    class solid.singleresponsibility.solution.EmployeeSaver {
        + save()
    }
  }
  

  namespace solid.singleresponsibility.solution {
    class solid.singleresponsibility.solution.HourReporter {
        + reportHours()
    }
  }
  

  namespace solid.singleresponsibility.solution {
    class solid.singleresponsibility.solution.PayCalculator {
        + calculateMonthlyPay()
    }
  }
  

  solid.singleresponsibility.solution.EmployeeSaver o-- solid.singleresponsibility.solution.EmployeeData : data
  solid.singleresponsibility.solution.HourReporter o-- solid.singleresponsibility.solution.EmployeeData : data
  solid.singleresponsibility.solution.PayCalculator o-- solid.singleresponsibility.solution.EmployeeData : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
